# charges-conciliation-app

./: .gitignore  .mcp.json  CLAUDE.md  README.md  data_billing_app_client_platform_ids  git-commit-and-push.bat  skills-lock.json  watch-and-push.ps1
.claude/: settings.json
.claude/hooks/: pre-commit.sh
app/: middleware.ts  package.json  pnpm-lock.yaml  proxy.ts
app/app/: globals.css  layout.tsx  page.tsx
app/lib/: budget.ts  format.ts  types.ts
docs/: architecture.md  data-april-2026.md  roadmap-google-ads-billing.md
docs/decisions/: 0001-cus-id-merge-strategy.md  0005-google-ads-spend-integration.md  0006-native-stripe-invoicing.md
docs/runbooks/: monthly-close.md  stripe-ingest.md
engine/: .env.example  CLAUDE.md  pyproject.toml  requirements.txt
engine/reconciliation_engine/: __init__.py  cli.py  config.py  models.py  reconciler.py  supabase_io.py
supabase/: CLAUDE.md  config.toml  seed.sql
supabase/.temp/: linked-project.json
supabase/migrations/: 0001_clients.sql  0002_billing_plans.sql  0003_periods.sql  0004_expected_charges.sql  0005_stripe_charges.sql  0006_reconciliation_results.sql  0007_exceptions.sql  0008_reconciliation_runs.sql  0009_anon_read_policies.sql  20260512000001_add_anon_write_billing_plans.sql  20260519000001_allow_anon_update_exceptions.sql  20260519000002_allow_anon_update_clients.sql  20260601000001_add_source_account_to_stripe_charges.sql  20260601000002_stripe_daily_cron.sql  20260601000003_drop_stripe_charges_stripe_id_fk.sql  20260604000001_allow_anon_update_expected_charges.sql  (+31 more)
tools/prompts/: adr-template.md
(+81 files in other folders)
