[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reconciliation-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.15.0",
    "python-dotenv==1.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["reconciliation_engine*"]
